--- a/list.html
+++ b/list.html
@@ -37,7 +37,7 @@
 <body>
 
     <h1>Cabrillo Games</h1>
-    <p>Welcome to Cabrillo Games! Here are some links you might find interesting:</p>
+    <p>if you know more games dm the inst jj.lwk.fine:</p>
     
     <ul>
         <li><a href="https://www.example1.com" target="_blank">Website Name 1</a></li>
