--- a/list.html
+++ b/list.html
@@ -40,7 +40,7 @@
     <p>if you know more games dm the inst jj.lwk.fine:</p>
     
     <ul>
-        <li><a href="https://www.example1.com" target="_blank">Website Name 1</a></li>
+        <li><a href="https://www.example1.com" target="_blank">Wesite Name 1</a></li>
         <li><a href="https://www.example2.com" target="_blank">Website Name 2</a></li>
         <li><a href="https://www.example3.com" target="_blank">Website Name 3</a></li>
         <li><a href="https://www.example4.com" target="_blank">Website Name 4</a></li>
