--- a/list.html
+++ b/list.html
@@ -9,38 +9,43 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
+            background-color: #1a1a1a; /* Black background */
+            color: #f4f4f4; /* Light grey text */
         }
         h1 {
-            color: #333;
+            color: #d4af37; /* Gold color */
+        }
+        p {
+            color: #cccccc; /* Grey text */
         }
         ul {
             list-style-type: none;
             padding: 0;
         }
         li {
-            background: #fff;
+            background: #333333; /* Dark grey background */
             margin: 5px 0;
             padding: 10px;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(255, 215, 0, 0.3); /* Light gold shadow */
         }
         a {
             text-decoration: none;
-            color: #007BFF;
+            color: #d4af37; /* Gold link color */
         }
         a:hover {
             text-decoration: underline;
+            color: #ffffff; /* Change link color on hover */
         }
     </style>
 </head>
 <body>
 
     <h1>Cabrillo Games</h1>
-    <p>if you know more games dm the inst jj.lwk.fine:</p>
+    <p>if you know more games dm the inst jj.lwk.fine</p>
     
     <ul>
-        <li><a href="https://www.example1.com" target="_blank">Wesite Name 1</a></li>
+        <li><a href="https://www.example1.com" target="_blank">Website Name 1</a></li>
         <li><a href="https://www.example2.com" target="_blank">Website Name 2</a></li>
         <li><a href="https://www.example3.com" target="_blank">Website Name 3</a></li>
         <li><a href="https://www.example4.com" target="_blank">Website Name 4</a></li>
