--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <ul>
         <li><a href="https://wordleunlimitedplay.com/" target="_blank">wordle</a></li>
-        <li><a href="https://www.example2.com" target="_blank">Website Name 2</a></li>
+        <li><a href="https://littlealchemy.com/" target="_blank">little alchemy</a></li>
         <li><a href="https://www.example3.com" target="_blank">Website Name 3</a></li>
         <li><a href="https://www.example4.com" target="_blank">Website Name 4</a></li>
         <li><a href="https://www.example5.com" target="_blank">Website Name 5</a></li>
