--- a/text.html
+++ b/text.html
@@ -10,12 +10,14 @@
             margin: 0;
             padding: 20px;
             background-color: #f4f4f4;
+            transition: background-color 0.3s, color 0.3s;
         }
         #chat-container {
             background: white;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            transition: background-color 0.3s, color 0.3s;
         }
         #messages {
             height: 300px;
@@ -25,6 +27,7 @@
             padding: 10px;
             border-radius: 5px;
             background-color: #fafafa;
+            transition: background-color 0.3s, color 0.3s;
         }
         .message {
             margin: 5px 0;
@@ -50,6 +53,24 @@
         button:hover {
             background-color: #31b0d5;
         }
+        .dark-mode {
+            background-color: #333;
+            color: white;
+        }
+        .dark-mode #chat-container {
+            background: #444;
+            border-color: #555;
+        }
+        .dark-mode #messages {
+            background-color: #555;
+            border-color: #666;
+        }
+        .dark-mode button {
+            background-color: #007bff;
+        }
+        .dark-mode button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +82,7 @@
     <input type="text" id="message-input" placeholder="Type your message here...">
     <input type="text" id="receiver-id" placeholder="Enter receiver's ID...">
     <button onclick="sendMessage()">Send</button>
+    <button onclick="toggleMode()">Toggle Dark/Light Mode</button>
 </div>
 
 <script>
@@ -106,19 +128,25 @@
         };
 
         messages.push(message);
-        displayMessages();
+        displayMessages(receiverId.value.trim());
         messageInput.value = '';
     }
 
-    function displayMessages() {
+    function displayMessages(receiverId) {
         const messagesContainer = document.getElementById('messages');
         messagesContainer.innerHTML = '';
 
         messages.forEach(msg => {
-            messagesContainer.innerHTML += `<div class="message"><strong>${msg.from}</strong> to <strong>${msg.to}</strong>: ${msg.text}</div>`;
+            if (msg.to === userId || msg.from === userId || msg.to === receiverId) {
+                messagesContainer.innerHTML += `<div class="message"><strong>${msg.from}</strong> to <strong>${msg.to}</strong>: ${msg.text}</div>`;
+            }
         });
 
         messagesContainer.scrollTop = messagesContainer.scrollHeight;
+    }
+
+    function toggleMode() {
+        document.body.classList.toggle('dark-mode');
     }
 </script>
 
