--- a/text.html
+++ b/text.html
@@ -87,15 +87,20 @@
 
 <script>
     let userId = localStorage.getItem('userId');
+    let messages = JSON.parse(localStorage.getItem('messages')) || [];
+    const darkMode = localStorage.getItem('darkMode') === 'true';
 
     if (!userId) {
         userId = generateId();
         localStorage.setItem('userId', userId);
     }
 
-    document.getElementById('user-id').innerText = userId;
+    if (darkMode) {
+        document.body.classList.add('dark-mode');
+    }
 
-    const messages = [];
+    document.getElementById('user-id').innerText = userId;
+    displayMessages();
 
     function generateId() {
         const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
@@ -128,6 +133,7 @@
         };
 
         messages.push(message);
+        localStorage.setItem('messages', JSON.stringify(messages));
         displayMessages(receiverId.value.trim());
         messageInput.value = '';
     }
@@ -147,6 +153,8 @@
 
     function toggleMode() {
         document.body.classList.toggle('dark-mode');
+        const isDarkMode = document.body.classList.contains('dark-mode');
+        localStorage.setItem('darkMode', isDarkMode);
     }
 </script>
 
