--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="https://wordleunlimitedplay.com/" target="_blank">wordle</a></li>
         <li><a href="https://littlealchemy.com/" target="_blank">little alchemy</a></li>
         <li><a href="https://pbskids.org/games" target="_blank">PBSkids</a></li>
-        <li><a href="https://www.example4.com" target="_blank">Website Name 4</a></li>
+        <li><a href="eaglercraft1-8.github.io" target="_blank">Minecraft 4</a></li>
         <li><a href="https://www.example5.com" target="_blank">Website Name 5</a></li>
     </ul>
 
