--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a href="https://littlealchemy.com/" target="_blank">little alchemy</a></li>
         <li><a href="https://pbskids.org/games" target="_blank">PBSkids</a></li>
         <li><a href="eaglercraft1-8.github.io" target="_blank">Minecraft 4</a></li>
+        <li><a href="https://windowslover1234.github.io/games/slope/" target="_blank">slope</a></li>
         <li><a href="https://www.example5.com" target="_blank">Website Name 5</a></li>
     </ul>
 
