--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <li><a href="https://pbskids.org/games" target="_blank">PBSkids</a></li>
         <li><a href="eaglercraft1-8.github.io" target="_blank">Minecraft</a></li>
         <li><a href="https://windowslover1234.github.io/games/slope/" target="_blank">slope</a></li>
+        <li><a href="https://cookieclickerfree.github.io/#google_vignette" target="_blank">cookie clicker</a></li>
         <li><a href="https://www.example5.com" target="_blank">Website Name 5</a></li>
     </ul>
+    
 
 </body>
 </html>
