--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <p>if you know more games dm the inst jj.lwk.fine</p>
     
     <ul>
-        <li><a href="https://wordleunlimitedplay.com/" target="_blank">wordle</a></li>
-        <li><a href="https://littlealchemy.com/" target="_blank">little alchemy</a></li>
+        <li><a href="https://wordleunlimitedplay.com/" target="_blank">Wordle</a></li>
+        <li><a href="https://littlealchemy.com/" target="_blank">Little Alchemy</a></li>
         <li><a href="https://pbskids.org/games" target="_blank">PBSkids</a></li>
-        <li><a href="https://windowslover1234.github.io/games/slope/" target="_blank">slope</a></li>
-        <li><a href="https://cookieclickerfree.github.io/#google_vignette" target="_blank">cookie clicker</a></li>
-        <li><a href="https://www.example5.com" target="_blank">Website Name 5</a></li>
+        <li><a href="https://windowslover1234.github.io/games/slope/" target="_blank">Slope</a></li>
+        <li><a href="https://cookieclickerfree.github.io/#google_vignette" target="_blank">Cookie Clicker</a></li>
+        <li><a href="https://turtletown71.github.io/" target="_blank">Minecraft</a></li>
     </ul>
     
 
