--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 
     <h1>Cabrillo Games</h1>
-    <p>if you know more games dm the inst jj.lwk.fine</p>
+    <p>if you know more games lmk</p>
     
     <ul>
         <li><a href="https://wordleunlimitedplay.com/" target="_blank">Wordle</a></li>
