--- a/yt.html
+++ b/yt.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Watch My Favorite Gaming Video</h1>
-    <iframe src="https://www.youtube.com/watch?v=09DXt_4w1ew&pp=ygULcG9wdWxhcm1tb3M%3D" allowfullscreen></iframe>
-    <p>Replace "VIDEO_ID" with the actual ID of the YouTube video you want to watch.</p>
+    <iframe src="https://www.youtube.com/embed/https://www.youtube.com/watch?v=09DXt_4w1ew&pp=ygULcG9wdWxhcm1tb3M%3D" allowfullscreen></iframe>
+    <p>Replace "VIDEO_ID" with the actual ID of the YouTube video you want t3o watch.</p>
 </body>
 </html>
