--- a/yt.html
+++ b/yt.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Video Page</title>
+    <title>My YouTube Video</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f1f1f1;
+            background-color: #000000;
         }
         iframe {
             width: 100%;
@@ -19,8 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Watch My Favorite Gaming Video</h1>
-    <iframe src="https://www.youtube.com/embed/https://www.youtube.com/watch?v=09DXt_4w1ew&pp=ygULcG9wdWxhcm1tb3M%3D" allowfullscreen></iframe>
-    <p>Replace "VIDEO_ID" with the actual ID of the YouTube video you want t3o watch.</p>
+    <h1>Watch This Video</h1>
+    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" allowfullscreen></iframe>
 </body>
 </html>
