--- a/yt.html
+++ b/yt.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <h1>Watch This Video</h1>
-    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" ></iframe>
 </body>
 </html>
