--- a/yt.html
+++ b/yt.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Watch This Video</h1>
+    <h1>Watch Ths Video</h1>
     <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" ></iframe>
 </body>
 </html>
