--- a/yt.html
+++ b/yt.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My YouTube Video</title>
+    <title>Embedded YouTube Video</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #000000;
+            background-color: #f1f1f1;
         }
         iframe {
             width: 100%;
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Watch Ths Video</h1>
-    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" ></iframe>
+    <h1>Watch This Video</h1>
+    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" allowfullscreen></iframe>
 </body>
 </html>
