--- a/yt.html
+++ b/yt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded YouTube Video</title>
+    <title>Watch YouTube Video</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,15 +11,18 @@
             padding: 20px;
             background-color: #f1f1f1;
         }
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
+        a {
+            display: inline-block;
+            padding: 10px 15px;
+            background-color: #ff0000;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>Watch This Video</h1>
-    <iframe src="https://www.youtube.com/embed/09DXt_4w1ew" allowfullscreen></iframe>
+    <h1>Watch the Video</h1>
+    <a href="https://www.youtube.com/watch?v=09DXt_4w1ew&pp=ygULcG9wdWxhcm1tb3M%3D" target="_blank">Click here to watch the video</a>
 </body>
 </html>
