--- a/yt.html
+++ b/yt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watch YouTube Video</title>
+    <title>Watch YouTube Video Directly</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,6 +23,6 @@
 </head>
 <body>
     <h1>Watch the Video</h1>
-    <a href="https://www.youtube.com/watch?v=09DXt_4w1ew&pp=ygULcG9wdWxhcm1tb3M%3D" target="_blank">Click here to watch the video</a>
+    <a href="https://your-video-download-service.com/download?video_id=09DXt_4w1ew" target="_blank">Click here to watch the video</a>
 </body>
 </html>
