--- a/yt.html
+++ b/yt.html
@@ -14,7 +14,7 @@
         a {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #ff0000;
+            background-color: #6a5f5f;
             color: white;
             text-decoration: none;
             border-radius: 5px;
