--- a/yt.html
+++ b/yt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watch YouTube Video Directly</title>
+    <title>Watch YouTube Video with VLC</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,18 +11,17 @@
             padding: 20px;
             background-color: #f1f1f1;
         }
-        a {
-            display: inline-block;
-            padding: 10px 15px;
-            background-color: #6a5f5f;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
-    <h1>Watch the Video</h1>
-    <a href="https://your-video-download-service.com/download?video_id=09DXt_4w1ew" target="_blank">Click here to watch the video</a>
+    <h1>How to Watch the Video</h1>
+    <p>To watch the YouTube video directly, follow these steps:</p>
+    <ol>
+        <li>Open VLC Media Player.</li>
+        <li>Go to <strong>Media</strong> > <strong>Open Network Stream</strong>.</li>
+        <li>Paste the following URL:</li>
+        <pre>https://www.youtube.com/watch?v=09DXt_4w1ew</pre>
+        <li>Click <strong>Play</strong>.</li>
+    </ol>
 </body>
 </html>
