--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <li><a href="https://pbskids.org/games" target="_blank">PBSkids</a></li>
         <li><a href="https://windowslover1234.github.io/games/slope/" target="_blank">Slope</a></li>
         <li><a href="https://cookieclickerfree.github.io/#google_vignette" target="_blank">Cookie Clicker</a></li>
-        <li><a href="https://turtletown71.github.io/" target="_blank">Minecraft</a></li>
+        <li><a href="https://www.otomads.top/game/minecraft/version/1.8/" target="_blank">Minecraft</a></li>
+        <li><a href="https://00s.myretrotvs.com/#" target="_blank">TV</a></li>
     </ul>
     
 
