--- a/yt.html
+++ b/yt.html
@@ -20,7 +20,7 @@
         <li>Open VLC Media Player.</li>
         <li>Go to <strong>Media</strong> > <strong>Open Network Stream</strong>.</li>
         <li>Paste the following URL:</li>
-        <pre>https://www.youtube.com/watch?v=09DXt_4w1ew</pre>
+        <pre>https://www.youtube.com/watch?v=zLODRvdrcco</pre>
         <li>Click <strong>Play</strong>.</li>
     </ol>
 </body>
