--- a/yt.html
+++ b/yt.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: #000000;
         }
         iframe {
             width: 100%;
@@ -23,7 +23,7 @@
 </head>
 <body>
     <iframe 
-        src="https://www.youtube.com/watch?v=zLODRvdrcco" 
+        src="https://www.youtube.com/embed/zLODRvdrcco" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
